
Fri Aug 25 17:37:33 EDT 1995	Paul Park	(pjpark@mit.edu)
	* dumpv4.c - Fix handle_keys().  It was trying to recreate work that
		has already been done.
	* Makefile.in, .Sanitize, loadv4.c, kdb5_ed_ct.ct - Add lddb4, the
		command to load a v4 dump file.  This is basically, kdb5_
		convert reconstituted to fit within the framework of kdb5_edit.

Thu Aug 24 19:28:39 1995  Theodore Y. Ts'o  <tytso@dcl>

	* .Sanitize: Update file list

Mon Aug 21 16:45:39 EDT 1995	Paul Park	(pjpark@mit.edu)
	* dump.c - Completely rework this logic to support old (e.g. Beta 5
		and previous) dump format and new dump format using the same
		commands.  This is differentiated by using the "-old" command
		qualifier.

	* kdb5_edit.M - Add description of -R and -s.  Remove "ascii represen-
		tation of a decimal number".  Remove "Bugs".

Fri Aug 18 17:06:06 EDT 1995	Paul Park	(pjpark@mit.edu)

	* ss_wrapper.c - Change sense of fgets() check so scripts work.


Tue Aug 15 14:22:50 EDT 1995	Paul Park	(pjpark@mit.edu)

	* kdb5_edit.c, ss_wrapper.c, cpw.c, kdb5_edit.h - Add support for
		-s scriptfile and fix up assorted gcc -Wall complaints.


Mon Aug 7 17:32:31 EDT 1995	Paul Park	(pjpark@mit.edu)
	* cpw.c - Use krb5_string_to_keysalts() to generate a list of unique
		key/salt pairs supplied in argv.


Mon Aug 07 11:16:03 1995  Chris Provenzano   (proven@mit.edu)

	* cpw.c : Uses new kdb change password routines for ank, ark, cpw,
		and crk. Also remove v4 variants of ank and cpw.
	* krb5_edit.c : Deleted old variants of rotuines now in cpw.c
	* kdb5_ed_ct.ct, kdb5_edit.M, tcl_wrapper.c: 
		Removed references to v4 variants of ank and cpw.
	* kdb5_edit.h (enter_pwd_key()) : Removed proto, it's nolonger 
		necessary as it's a static routine in cpw.c

Thu Aug 03 12:13:50 1995  Chris Provenzano   (proven@mit.edu)

	* cpw.c : New change password code for kdb5_edit.
	* dumpv4.c : Get it to compile with new kdb format.

Mon Jul 31 15:47:30 EDT 1995	Paul Park	(pjpark@mit.edu)