@@ -313,7 +313,39 @@ void dump_v4db(argc, argv)
 int handle_keys(arg)
     struct dump_record *arg;
 {
-    arg->realm = cur_realm;
+    krb5_error_code retval;
+    char *defrealm;
+    char *mkey_name = 0;
+    char *mkey_fullname;
+    krb5_principal master_princ;
+
+    if (retval = krb5_get_default_realm(edit_context, &defrealm)) {
+      com_err(arg->comerr_name, retval, 
+	      "while retrieving default realm name");
+      exit(1);
+    }	    
+    arg->realm = defrealm;
+
+    /* assemble & parse the master key name */
+
+    if (retval = krb5_db_setup_mkey_name(edit_context, mkey_name, arg->realm, 
+					 &mkey_fullname, &master_princ)) {
+	com_err(arg->comerr_name, retval, "while setting up master key name");
+	exit(1);
+    }
+
+    krb5_use_keytype(edit_context, &master_encblock, DEFAULT_KDC_KEYTYPE);
+    if (retval = krb5_db_fetch_mkey(edit_context, master_princ, 
+				    &master_encblock, 0,
+				    0, (char *) NULL, 0, &master_keyblock)) {
+	com_err(arg->comerr_name, retval, "while reading master key");
+	exit(1);
+    }
+    if (retval = krb5_process_key(edit_context, &master_encblock, 
+				    &master_keyblock)) {
+	com_err(arg->comerr_name, retval, "while processing master key");
+	exit(1);
+    }
     arg->v5master = &master_encblock;
     return(0);
 }
