@@ -1,4 +1,9 @@
 
+Tue Sep 05 22:10:34 1995   Chris Provenzano (proven@mit.edu)
+
+        * cpw.c, dump.c, dumpv4.c, kdb5_edit.c, loadv4.c : Remove krb5_enctype 
+		references, and replace with krb5_keytype where appropriate.
+
 Fri Aug 25 17:37:33 EDT 1995	Paul Park	(pjpark@mit.edu)
 	* dumpv4.c - Fix handle_keys().  It was trying to recreate work that
 		has already been done.
